# text-to-sql

./: README.md  code_walkthrough.md  generate_eval_data.py  main.py  pyproject.toml  setup.sh
model_output/: text_to_sql_model_results.xlsx
src/: custom_test_cases.py  model_outputs.py  models.yaml  prompts.py  sql_evaluator.py  sql_generator.py  sql_response.py
